test/integration/bad/lang/bad_decl1.stan
data {
  // unfortunately the error here got much worse
  real x, int y;
}
